objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_methodology_details__c</fullName>
        <label>Billing methodology details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <formula>Opportunity.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>Opportunity Close Date</description>
        <formula>Opportunity.CloseDate</formula>
        <inlineHelpText>Close Date on Opportunity</inlineHelpText>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <defaultValue>&apos;USD&apos;</defaultValue>
        <description>Currency</description>
        <inlineHelpText>Currency Type</inlineHelpText>
        <label>Currency ISO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_of_Services__c</fullName>
        <description>Sum of Service Acceptance Date and Duration of Services</description>
        <formula>Service_Acceptance_Date__c +  (Number_of_Months__c*30.44)</formula>
        <inlineHelpText>Sum of Service Acceptance Date and Duration of Services</inlineHelpText>
        <label>End Date of Services</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hourly_Cost__c</fullName>
        <label>Hourly Cost</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Payment_Terms__c</fullName>
        <defaultValue>&apos;Due on receipt&apos;</defaultValue>
        <description>Net Payment Terms</description>
        <inlineHelpText>Net Payment Terms for Quote PDF</inlineHelpText>
        <label>Net Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Months__c</fullName>
        <defaultValue>12</defaultValue>
        <description>Duration of services</description>
        <inlineHelpText>Duration of services</inlineHelpText>
        <label>Duration of Services</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Due_Date__c</fullName>
        <defaultValue>&apos;Due on Receipt&apos;</defaultValue>
        <description>Payment Due Date</description>
        <inlineHelpText>Payment Due Date</inlineHelpText>
        <label>Payment Due</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Excecutive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Sales Executive</inlineHelpText>
        <label>Sales_Excecutive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Acceptance_Date__c</fullName>
        <description>Date when Service was initiated</description>
        <inlineHelpText>Service Acceptance Date</inlineHelpText>
        <label>Service Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Terms_Conditions__c</fullName>
        <formula>&quot;1. Any customizations and services that are not an out-of-the box solution of AutoRABIT shall require additional professional services.&quot; +
BR() +&quot;2. ** This quote is based on a direct purchase from the named customer above. Any payment processing charges, both direct and indirect, would be borne by the customer. &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Terms &amp; Conditions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <defaultValue>&quot;Terms &amp; Conditions:&quot;</defaultValue>
        <label>Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <summarizedField>QuoteLineItem.Total_Amount__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Discount__c</fullName>
        <formula>Opportunity.Total_Discount_c__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Was_any_3rd_party_services_used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Was any 3rd party services used?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Who_will_AutoRABIT_pay_for_item__c</fullName>
        <label>Who will AutoRABIT pay for item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Billing_Contact_Name__c</fullName>
        <label>3rd Party Billing Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>